...
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <Button
        android:id="@+id/dodButtonSt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Deal of the Day"
        app:layout_constraintBottom_toTopOf="@+id/chatBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDescription" />

    <Button
...
